sistema  de dictado de forma aleatoria y por rango para que el usuario no se aburra, selecciona en la lista solo lo que va aprender  y de la lista le da de forma alearios

--- a/index_colors.html
+++ b/index_colors.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!--
+    <!-- 
     <audio id="audio" src="src/mp3/Que-se-abra-el-Cielo-PISTA.mp3"></audio>
     <audio id="audio" autoplay loop  controls src="src/mp3/Que-se-abra-el-Cielo-PISTA.mp3"></audio>
     <audio id="audio" src="src/mp3/Que-se-abra-el-Cielo-PISTA.mp3"></audio>
@@ -74,7 +74,7 @@
 
     </table>
 
-    <script src="/js/main.js" defer></script>
+    <script src="/js/main_colors.js" defer></script>
 </body>
 
 </html>
