--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 <body>
     <h1> Dictation English</h1>
 
-    <div> 
-       <a href="index_colors.html">
-           vocabulary Colors
-       </a>
-    </div>
+    <ul> 
+        <li>
+            <a href="index_colors.html">
+                Colors Dictation
+            </a>
+        </li>
+        <li>
+            <a href="index_numbersOrdinal.html">
+            Numbers Dictation
+           </a>
+        </li>
+    </ul>
 
 
     
