sistema aleatorio números cardinales, se copio el código el num ordinales por ende se elimina código innecesario

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         </li>
         <li>
             <a href="index_numbersOrdinal.html">
-            Numbers Dictation
+            Numbers Ordinal Dictation
+           </a>
+        </li>
+        <li>
+            <a href="index_numbersCardinal.html">
+            Numbers Cardinal Dictation
            </a>
         </li>
     </ul>
