--- a/index.html
+++ b/index.html
@@ -4,29 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dictation English</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1> Dictation English</h1>
+    <h1 class="titleMain">System Dictation English</h1>
+    <div class="wrapper">
+        <a href="index_colors.html" class="btn_link">
+            Colors Dictation
+        </a>
+        <a href="index_numbersOrdinal.html" class="btn_link">
+        Numbers Ordinal Dictation
+       </a>
+       <a href="index_numbersCardinal.html" class="btn_link">
+           Numbers Cardinal Dictation
+       </a>
+       <a href="index_musicUnlasting.html" class="btn_link">
+       Music English of LIsa theme Unlasting
+      </a>
 
-    <ul> 
-        <li>
-            <a href="index_colors.html">
-                Colors Dictation
-            </a>
-        </li>
-        <li>
-            <a href="index_numbersOrdinal.html">
-            Numbers Ordinal Dictation
-           </a>
-        </li>
-        <li>
-            <a href="index_numbersCardinal.html">
-            Numbers Cardinal Dictation
-           </a>
-        </li>
-    </ul>
-
-
-    
+    </div>    
 </body>
 </html>
