añadir faltanta a url

--- a/index_colors.html
+++ b/index_colors.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colors English </title>
-    <link rel="stylesheet" href="css/style_colors.css">
-    <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style_colors.css">
+    <link rel="icon" href="/src/img/logo_book.svg" type="image/x-icon">
 </head>
 
-<body>
+<body> 
     <!--
     NÚMERO EN INGLÉS teamA
     -->
