--- a/index_musicUnlasting.html
+++ b/index_musicUnlasting.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LiSA - unlasting lyrics </title>
     <link rel="stylesheet" href="css/style_colors.css">
-    <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
+    <link rel="icon" href="/src/img/logo_book.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="btn_navigation">
             <a href="index.html">
-                <img src="src/img/btn_index_back.svg" alt="">
+                <img src="/src/img/btn_index_back.svg" alt="">
             </a>
         </div>
         <h1 class="title">
@@ -26,7 +26,7 @@
         </h1>
         <div class="btn_navigation">
             <a href="index.html">
-                <img src="src/img/btn_index_next.svg" alt="">
+                <img src="/src/img/btn_index_next.svg" alt="">
             </a>
         </div>
 
