quitar los cambio realizados al url y src

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dictation English</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1 class="titleMain">System Dictation English</h1>
     <div class="wrapper">
-        <a href="/index_colors.html" class="btn_link">
+        <a href="index_colors.html" class="btn_link">
             Colors Dictation
         </a>
-        <a href="/index_numbersOrdinal.html" class="btn_link">
+        <a href="index_numbersOrdinal.html" class="btn_link">
         Numbers Ordinal Dictation
        </a>
-       <a href="/index_numbersCardinal.html" class="btn_link">
+       <a href="index_numbersCardinal.html" class="btn_link">
            Numbers Cardinal Dictation
        </a>
-       <a href="/index_musicUnlasting.html" class="btn_link">
+       <a href="index_musicUnlasting.html" class="btn_link">
        Music English of LIsa theme Unlasting
       </a>
       
