--- a/index_numbersCardinal.html
+++ b/index_numbersCardinal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Numbers English Cardinal</title>
     <link rel="stylesheet" href="css/style_colors.css">
-    <link rel="icon" href="/src/img/logo_book.svg" type="image/x-icon">
+    <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div class="header">
         <div class="btn_navigation"  >
             <a href="index.html">
-                <img src="/src/img/btn_index_back.svg" alt="">
+                <img src="src/img/btn_index_back.svg" alt="">
             </a>
         </div>
         <h1 class="title">
@@ -25,7 +25,7 @@
         </h1>
         <div class="btn_navigation" >
             <a href="index.html">
-                <img src="/src/img/btn_index_next.svg" alt="">
+                <img src="src/img/btn_index_next.svg" alt="">
             </a>
         </div>
 
@@ -90,7 +90,7 @@
     
     
 
-    <script src="/js/main_numbersCardinal.js" defer></script>
+    <script src="js/main_numbersCardinal.js" defer></script>
 </body>
 
 </html>
