--- a/index_numbersOrdinal.html
+++ b/index_numbersOrdinal.html
@@ -16,7 +16,7 @@
     <div class="header">
         <div class="btn_navigation"  >
             <a href="index.html">
-                <img src="/src/img/btn_index_back.svg" alt="">
+                <img src="src/img/btn_index_back.svg" alt="">
             </a>
         </div>
         <h1 class="title">
@@ -25,7 +25,7 @@
         </h1>
         <div class="btn_navigation" >
             <a href="index.html">
-                <img src="/src/img/btn_index_next.svg" alt="">
+                <img src="src/img/btn_index_next.svg" alt="">
             </a>
         </div>
 
@@ -96,7 +96,7 @@
         <span id="ABCD_wordEnglish" class="wordEnglish showNo">word English</span>
     </div>
     <a class="btn_controls left" href="index.html" width="30">
-        <img src="/src/img/btn_index_back.svg" alt="" width="30">
+        <img src="src/img/btn_index_back.svg" alt="" width="30">
     </a>
 
     <div class="btn_container">
@@ -116,7 +116,7 @@
         <a id="ABCD_num_random" class="num_random" href="#ABCD_tablas">1</a>
     </div>
     <a class="btn_controls right" href="index.html">
-        <img src="/src/img/btn_index_next.svg" alt="">
+        <img src="src/img/btn_index_next.svg" alt="">
     </a>
     <div class="campo">
         <input id="ABCD_inputES_phrase" type="text" placeholder="Here Spanish">
@@ -142,7 +142,7 @@
     
     
 
-    <script src="/js/main_numbersOrdinal.js" defer></script>
+    <script src="js/main_numbersOrdinal.js" defer></script>
 </body>
 
 </html>
