--- a/index_colors.html
+++ b/index_colors.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colors English </title>
-    <link rel="stylesheet" href="/css/style_colors.css">
-    <link rel="icon" href="/src/img/logo_book.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style_colors.css">
+    <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
 </head>
 
 <body> 
@@ -86,7 +86,7 @@
     
     
 
-    <script src="/js/main_colors.js" defer></script>
+    <script src="js/main_colors.js" defer></script>
 </body>
 
 </html>
