cambiar direccion de img con el dominio del github

--- a/index_colors.html
+++ b/index_colors.html
@@ -16,7 +16,7 @@
     <div class="header">
         <div class="btn_navigation"  >
             <a href="index.html">
-                <img src="src/img/btn_index_back.svg" alt="">
+                <img src="https://yanchapanta.github.io/idiomaEN/src/img/btn_index_back.svg" alt="">
             </a>
         </div>
         <h1 class="title">
@@ -25,7 +25,7 @@
         </h1>
         <div class="btn_navigation" >
             <a href="index.html">
-                <img src="src/img/btn_index_next.svg" alt="">
+                <img src="https://yanchapanta.github.io/idiomaEN/src/img/btn_index_next.svg" alt="">
             </a>
         </div>
 
