--- a/index_musicUnlasting.html
+++ b/index_musicUnlasting.html
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="btn_navigation">
             <a href="index.html">
-                <img src="src/img/btn_index_back.svg" alt="">
+                <img src="https://yanchapanta.github.io/idiomaEN/src/img/btn_index_back.svg" alt="">
             </a>
         </div>
         <h1 class="title">
@@ -26,7 +26,7 @@
         </h1>
         <div class="btn_navigation">
             <a href="index.html">
-                <img src="src/img/btn_index_next.svg" alt="">
+                <img src="https://yanchapanta.github.io/idiomaEN/src/img/btn_index_next.svg" alt="">
             </a>
         </div>
 
