Cambio de celdas input a item parrafo, para que sea responsive en celphon

--- a/index_99word.html
+++ b/index_99word.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reto, phrases </title>
+    <title>Reto,  phrases </title>
     <link rel="stylesheet" href="css/style_colors.css">
     <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
 </head>
@@ -22,7 +22,7 @@
         </div>
         <h1 class="title">
             <span id="totalList"></span>
-            Reto, phrases
+            Reto,  phrases
         </h1>
         <div class="btn_navigation">
             <a href="index.html">
@@ -33,7 +33,10 @@
     </div>
 
     <div class="campo">
-        <input disabled id="teamA_inputEN_phrase" class="showNo" type="text">
+        <p disabled id="teamA_inputEN_phrase" class="showNo" >
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
+        
         <span id="teamA_wordEnglish" class="wordEnglish showNo">word English</span>
     </div>
     <div class="wrap_btn">
@@ -66,7 +69,9 @@
     </div>
 
     <div class="campo">
-        <input id="teamA_inputES_phrase" type="text" placeholder="Here Spanish">
+        <p disabled id="teamA_inputES_phrase"  placeholder="Here Spanish">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
         <span id="teamA_wordSpanish" class="wordSpanish">es</span>
     </div>
     <br>
