--- a/index_numbersCardinal.html
+++ b/index_numbersCardinal.html
@@ -33,7 +33,9 @@
   
 
     <div class="campo">
-        <input disabled id="teamA_inputEN_phrase" class="showNo" type="text">
+        <p disabled id="teamA_inputEN_phrase" class="showNo" >
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
         <span id="teamA_wordEnglish" class="wordEnglish showNo">word English</span>
     </div>
    
@@ -67,7 +69,9 @@
     </div>
   
     <div class="campo">
-        <input id="teamA_inputES_phrase" type="text" placeholder="Here Spanish">
+        <p disabled id="teamA_inputES_phrase"  placeholder="Here Spanish">
+            
+        </p>
         <span id="teamA_wordSpanish" class="wordSpanish">es</span>
     </div>
     <br>
