Se añade contenido de figuras

--- a/index_figure.html
+++ b/index_figure.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reto,  phrases </title>
+    <title>Figuras Geométricas </title>
     <link rel="stylesheet" href="css/style_colors.css">
     <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
 </head>
@@ -22,7 +22,7 @@
         </div>
         <h1 class="title">
             <span id="totalList"></span>
-            Reto,  phrases
+            Figuras Geométricas
         </h1>
         <div class="btn_navigation">
             <a href="index.html">
@@ -92,8 +92,14 @@
     <br>
     <br>
     <br>
-    <br>
     <h3>Contenido</h3>
+    <a href="https://concepto.de/figuras-geometricas/" target="_blank"> Ir a figuras Geométricas</a>
+    <ul>
+        <li>Del 1 al 15 Figuras Geométricas</li>
+        <li>Del 16 al 31 Figuras Bidimensionales o planas</li>
+        <li>Del 32 al 41 Figuras Tridimensionales</li>
+    </ul>
+    <br>
 
     <table id="teamA_tablas">
         <tr>
@@ -109,7 +115,7 @@
     <script src="js/timer.js"></script>
 
 
-    <script src="js/main_99word.js" defer></script>
+    <script src="js/main_figure.js" defer></script>
     
    
 </body>
