--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
        <a href="indexEnglishGramar.html" class="btn_link">
         English Grammar Rerefence Bookk
       </a>
+       <a href="index_figure.html" class="btn_link">
+        Type of figures in english
+      </a>
       
     </div>    
 </body>
