Actualización para ingresar los datos por json

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
        <a href="index_figure.html" class="btn_link">
         Type of figures in english
       </a>
+       <a href="index_lesson1.html" class="btn_link">
+        QUICKLY ENGLISH LEARNED SPOKEN
+      </a>
       
     </div>    
 </body>
