Ingreso de contenido para inglés hablado, y corrección para el funcionamiento correcto de botones en mobil, corrección de input para mobili

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h1 class="titleMain">System Dictation English</h1>
     <div class="wrapper">
+        <a href="lesson/indexEnglishSpoken.html" class="btn_link">
+            QUICKLY ENGLISH LEARNED SPOKEN - APRENDI RÁPIDAMENTE INGLÉS HABLADO
+       </a>
         <a href="index_colors.html" class="btn_link">
             Colors Dictation
         </a>
@@ -29,9 +32,6 @@
       </a>
        <a href="index_figure.html" class="btn_link">
         Type of figures in english
-      </a>
-       <a href="index_lesson1.html" class="btn_link">
-        QUICKLY ENGLISH LEARNED SPOKEN
       </a>
       
     </div>    
