--- a/index_99word.html
+++ b/index_99word.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RETO 99 PALABRAS </title>
-    <link rel="stylesheet" href="../css/style_colors.css">
-    <link rel="icon" href="../src/img/logo_book.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style_colors.css">
+    <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
 </head>
 
 <body data-json="../ddbb/P99word.json">
