--- a/index_colors.html
+++ b/index_colors.html
@@ -63,14 +63,14 @@
         </div>
         <div class="btn_container">
             <div>
-                <input id="teamA_btn_repeat" class="btn_repeat" type="button">
+                <input id="teamA_btn_repeat" class="btn_repeatEn" type="button">
             </div>
             <div class="btn_container_central">
                 <input id="teamA_btn_showMe" class="btn_showMe" type="button">
                 <input id="teamA_btn_spanish" class="btn_spanish" type="button">
             </div>
             <div>
-                <input id="teamA_btn_next" class="btn_next" type="button">
+                <input id="teamA_btn_next" class="btn_nextEn" type="button">
     
             </div>
             <div class="img_animation"></div>
