update general voz

--- a/index_99word.html
+++ b/index_99word.html
@@ -16,7 +16,7 @@
     -->
     <div class="header">
         <div class="btn_navigation">
-            <a href="indexEnglishSpoken.html">
+            <a href="index.html">
                 <img src="https://yanchapanta.github.io/idiomaEN/src/img/btn_index_back.svg" alt="">
             </a>
         </div>
