--- a/index_figure.html
+++ b/index_figure.html
@@ -65,7 +65,7 @@
         </div>
         <div class="btn_container">
             <div>
-                <input id="teamA_btn_repeat" class="btn_repeat" type="button">
+                <input id="teamA_btn_repeat" class="btn_repeatEn" type="button">
                 <input id="teamA_btn_repeat_word" class="btn_repeat_word" type="text" value="word">
                 <input id="teamA_btn_repeat_ES" class="btn_repeat" type="button">
             </div>
