--- a/index_numbersOrdinal.html
+++ b/index_numbersOrdinal.html
@@ -65,7 +65,7 @@
         </div>
         <div class="btn_container">
             <div>
-                <input id="teamA_btn_repeat" class="btn_repeat" type="button">
+                <input id="teamA_btn_repeat" class="btn_repeatEn" type="button">
             </div>
             <div class="btn_container_central">
                 <input id="teamA_btn_showMe" class="btn_showMe" type="button">
