actualizacion con git

--- a/englishPart1.html
+++ b/englishPart1.html
@@ -51,7 +51,7 @@
         </div>
         <div class="btn_container">
             <div>
-                <input id="teamA_btn_repeat" class="btn_repeat" type="button">
+                <input id="teamA_btn_repeat" class="btn_repeatEn" type="button">
                 <input id="teamA_btn_repeat_word" class="btn_repeat_word" type="text" value="word">
             </div>
             <div class="btn_container_central">
@@ -59,7 +59,7 @@
                 <input id="teamA_btn_spanish" class="btn_spanish" type="button">
             </div>
             <div>
-                <input id="teamA_btn_next" class="btn_next" type="button">
+                <input id="teamA_btn_next" class="btn_nextEn" type="button">
 
             </div>
             <div class="img_animation"></div>
