--- a/index_figure.html
+++ b/index_figure.html
@@ -67,14 +67,14 @@
             <div>
                 <input id="teamA_btn_repeat" class="btn_repeatEn" type="button">
                 <input id="teamA_btn_repeat_word" class="btn_repeat_word" type="text" value="word">
-                <input id="teamA_btn_repeat_ES" class="btn_repeat" type="button">
+                <input id="teamA_btn_repeat_ES" class="btn_repeatEs" type="button">
             </div>
             <div class="btn_container_central">
                 <input id="teamA_btn_showMe" class="btn_showMe" type="button">
                 <input id="teamA_btn_spanish" class="btn_spanish" type="button">
             </div>
             <div>
-                <input id="teamA_btn_next" class="btn_next" type="button">
+                <input id="teamA_btn_next" class="btn_nextEn" type="button">
 
             </div>
             <div class="img_animation"></div>
