--- a/index_musicUnlasting.html
+++ b/index_musicUnlasting.html
@@ -54,7 +54,7 @@
                 <!--
                 https://www.youtube.com/watch?v=-LbVgpqKuDw
                 -->
-                <div class="clock">
+                <div class="clock"> 
                     <input class="number" type="text" maxlength="2" value="00"><span>hs</span><input class="number" type="text" maxlength="2" value="00"><span>min</span><input class="number" type="text" maxlength="2" value="00"><span>sec</span>
                 </div>
                 <div class="buttons">
@@ -73,7 +73,7 @@
                 <input id="teamA_btn_spanish" class="btn_spanish" type="button">
             </div>
             <div>
-                <input id="teamA_btn_next" class="btn_next" type="button">
+                <input id="teamA_btn_next" class="btn_nextEn" type="button">
 
             </div>
             <div class="img_animation"></div>
