--- a/index_numbersOrdinal.html
+++ b/index_numbersOrdinal.html
@@ -72,7 +72,7 @@
                 <input id="teamA_btn_spanish" class="btn_spanish" type="button">
             </div>
             <div>
-                <input id="teamA_btn_next" class="btn_next" type="button">
+                <input id="teamA_btn_next" class="btn_nextEn" type="button">
     
             </div>
             <div class="img_animation"></div>
