cambio ../ssss solo archivo

--- a/index_examen.html
+++ b/index_examen.html
@@ -120,7 +120,7 @@
         </tr>
     </table>
    
-     <script src="../js/main_lesson1.js" defer></script>
+     <script src="js/main_lesson1.js" defer></script>
     
    
 </body>
