--- a/index_99word.html
+++ b/index_99word.html
@@ -142,7 +142,7 @@
     <script src="../js/timer.js"></script>
 
 
-    <script src="../js/main_lesson1.js" defer></script>
+    <script src="js/main_lesson1.js" defer></script>
     
    
 </body>
