--- a/index_99word.html
+++ b/index_99word.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
 </head>
 
-<body data-json="../ddbb/P99word.json">
+<body data-json="ddbb/P99word.json">
     
     <!--
     NÚMERO EN INGLÉS teamA
@@ -139,7 +139,7 @@
         </tr>
     </table>
    
-    <script src="../js/timer.js"></script>
+    <script src="js/timer.js"></script>
 
 
     <script src="js/main_lesson1.js" defer></script>
