intento direccion json 2

--- a/index_examen.html
+++ b/index_examen.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
 </head>
 
-<body data-json="/ddbb/examen.json">
+<body data-json="./ddbb/examen.json">
     
     <!--
     NÚMERO EN INGLÉS teamA
