--- a/index_examen.html
+++ b/index_examen.html
@@ -7,6 +7,11 @@
     <title>Examen Franklin 2025 </title>
     <link rel="stylesheet" href="css/style_colors.css">
     <link rel="icon" href="src/img/logo_book.svg" type="image/x-icon">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#your-color">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 
 <body data-json="./ddbb/examen.json">
@@ -143,7 +148,6 @@
             .catch(error => console.log('SW registration failed'));
         }
     </script>
-   
 </body>
 
 </html>
